[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-model-bench"
version = "0.1.0"
description = "Automated vLLM performance and stability benchmark orchestrator"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vmb = "vmb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
